--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -70,8 +70,10 @@
         .site-logo {
             width: 100%;
             height: 100%;
-            border-radius: 100%;
-            box-shadow: var(--shadow-l1);
+            //border-radius: 100%;
+            border-radius: 0%;
+            //box-shadow: var(--shadow-l1);
+            box-shadow: 0px;
         }
 
         .emoji {
