--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -1,6 +1,6 @@
 {{ define "body-class" }}template-archives{{ end }}
 {{ define "main" }}
-    {{- $taxonomy := $.Site.GetPage "taxonomyTerm" "ccategories" -}}
+    {{- $taxonomy := $.Site.GetPage "taxonomyTerm" "categories" -}}
     {{- $terms := $taxonomy.Pages -}}
     {{ if $terms }}
     <h2 class="section-title">{{ $taxonomy.Title }}</h2>
