--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -125,7 +125,7 @@
 
         &:not(:last-of-type):after {
             content: "";
-            width: 100px;
+            width: 100%;
             height: 2px;
             background-color: var(--body-text-color);
             display: block;
