--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -27,7 +27,7 @@
             <div>
                 {{ partial "helper/icon" "date" }}
                 <time class="article-time--published">
-                    {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
+                    {{- time.Format (or .Site.Params.dateFormat.published ":date_long") -}}
                 </time>
             </div>
         {{ end }}
