--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -34,7 +34,7 @@
             {{ end }}
         {{ end }}
 
-        <h1 class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></h1>
+        <!-- <h1 class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></h1> -->
         <h2 class="site-description">{{ .Site.Params.sidebar.subtitle }}</h2>
 
         {{- with .Site.Menus.social -}}
