adding keywords, cookie table

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -55,11 +55,20 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 *   Global font family
 */
 :root {
+    /*
     --sys-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
     --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
-
     --base-font-family: "Lato", var(--sys-font-family), var(--zh-font-family), sans-serif;
     --code-font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    */
+    --code-font-family: "Be Vietnam Pro";
+    --base-font-family: "Be Vietnam Pro";
+    --sys-font-family: "Be Vietnam Pro";
+    --zh-font-family: "Be Vietnam Pro";
+
+
+
+
 }
 
 /*
