--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
             </main>
             {{- block "right-sidebar" . -}}{{ end }}
         </div>
+        {{ partial "cookie-notice.html" }}
         {{ partial "footer/include.html" . }}
     </body>
 </html>
