adding netlify auth

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -1,6 +1,7 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta name='keywords' content="Tábor, tábořiště, železnice, boro, boro.cz, dětský tábor, letní tábor, letni tabor, příroda, dětské, rekreace, švp">
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 {{- $description := partialCached "data/description" . .RelPermalink -}}
 <meta name='description' content='{{ $description }}'>
