--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,5 +17,17 @@
         </div>
         {{ partial "cookie-notice.html" }}
         {{ partial "footer/include.html" . }}
+
+        <script>
+          if (window.netlifyIdentity) {
+              window.netlifyIdentity.on("init", user => {
+                if (!user) {
+                  window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
+                  });
+                }
+              });
+            }
+        </script>
     </body>
 </html>
