--- a/layouts/partials/widget/countdown.html
+++ b/layouts/partials/widget/countdown.html
@@ -2,10 +2,14 @@
 <link rel="stylesheet" href="/css/countdown.css"> -->
 
 <section class="widget countdown">
+
+
+  <div class="widget-title">
     <div class="widget-icon">
         {{ partial "helper/icon" "hash" }}
     </div>
-    <h2 class="widget-title section-title">{{ T "widget.countdown.title" }}</h2>
+    <h2 class="section-title">{{ T "widget.countdown.title" }}</h2>
+  </div>
 
     <div id="countdown"></div>
 
