--- a/layouts/partials/widget/tag-cloud.html
+++ b/layouts/partials/widget/tag-cloud.html
@@ -1,8 +1,11 @@
 <section class="widget tagCloud">
+
+  <div class="widget-title">
     <div class="widget-icon">
         {{ partial "helper/icon" "tag" }}
     </div>
-    <h2 class="widget-title section-title">{{ T "widget.tagCloud.title" }}</h2>
+    <h2 class="section-title">{{ T "widget.tagCloud.title" }}</h2>
+  </div>
 
     <div class="tagCloud-tags">
         {{ range first .Site.Params.widgets.tagCloud.limit .Site.Taxonomies.tags.ByCount }}
