--- a/layouts/partials/widget/countdown.html
+++ b/layouts/partials/widget/countdown.html
@@ -6,7 +6,7 @@
 
   <div class="widget-title">
     <div class="widget-icon">
-        {{ partial "helper/icon" "hash" }}
+        {{ partial "helper/icon" "clock" }}
     </div>
     <h2 class="section-title">{{ T "widget.countdown.title" }}</h2>
   </div>
