--- a/layouts/partials/widget/countdown.html
+++ b/layouts/partials/widget/countdown.html
@@ -41,7 +41,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("countdown").innerHTML = "Tábor právě začal!";
+    document.getElementById("countdown").innerHTML = "Tábor právě probíhá!";
   }
 }, 1000);
 </script>
