added customizable coundount title

--- a/layouts/partials/widget/countdown.html
+++ b/layouts/partials/widget/countdown.html
@@ -8,7 +8,7 @@
     <div class="widget-icon">
         {{ partial "helper/icon" "clock" }}
     </div>
-    <h2 class="section-title">{{ T "widget.countdown.title" }}</h2>
+    <h2 class="section-title">{{ $.Site.Params.Countdown.title }}</h2>
   </div>
 
     <div id="countdown"></div>
